# src/server/user_management.rs
@@ -2,8 +2,8 @@ use std::error::Error;
 use actix_web::{web, Scope, HttpRequest, HttpResponse};
 use super::super::model::user::{CreatePath, CreateManageUser, UpdateManageUser, UpdateManagePassword};
 use super::super::service::user::{user_exists, user_create};
-use super::super::service::user_management::{user_list, user_get, user_get_by_username, user_set_password, user_set_enable, user_delete};
-use super::super::service::token::token_clean_all_by_id;
+use super::super::service::user_management::{user_list, user_get_by_username, user_set_password, user_set_enable};
+use super::super::service::token::token_clean_all;
 use super::super::service::transaction_res;
 use super::super::util::check::validate_std_name;
 use super::verify_staff;
@@ -48,31 +48,32 @@ fn create(body: web::Json<CreateManageUser>, req: HttpRequest) -> HttpResponse {
         }
     })
 }
-fn retrieve(user_id: web::Path<i32>, req: HttpRequest) -> HttpResponse {
+fn retrieve(username: web::Path<String>, req: HttpRequest) -> HttpResponse {
     transaction_res(|trans| {
         if let Err(e) = verify_staff(trans, &req) { return e }
-        match user_get(trans, *user_id) {
+        match user_get_by_username(trans, &*username) {
             Err(e) => HttpResponse::InternalServerError().body(e.description().to_string()),
             Ok(Some(ok)) => HttpResponse::Ok().json(ok),
             Ok(None) => HttpResponse::NotFound().finish()
         }
     })
 }
-fn update(user_id: web::Path<i32>, body: web::Json<UpdateManageUser>, req: HttpRequest) -> HttpResponse {
+fn update(username: web::Path<String>, body: web::Json<UpdateManageUser>, req: HttpRequest) -> HttpResponse {
     transaction_res(|trans| {
+        let username = &username.to_string();
         if let Err(e) = verify_staff(trans, &req) { return e }
-        let mut user = match user_get(trans, *user_id) {
+        let mut user = match user_get_by_username(trans, &username) {
             Err(e) => return HttpResponse::InternalServerError().body(e.description().to_string()),
             Ok(None) => return HttpResponse::NotFound().finish(),
             Ok(Some(ok)) => ok
         };
         if user.enable ^ body.enable {
             if user.enable {
-                if let Err(e) = token_clean_all_by_id(trans, *user_id) {
+                if let Err(e) = token_clean_all(trans, &username) {
                     return HttpResponse::InternalServerError().body(e.description().to_string())
                 }
             }
-            match user_set_enable(trans, *user_id, body.enable) {
+            match user_set_enable(trans, &username, body.enable) {
                 Err(e) => HttpResponse::InternalServerError().body(e.description().to_string()),
                 Ok(_) => {
                     user.enable = body.enable;
@@ -84,23 +85,10 @@ fn update(user_id: web::Path<i32>, body: web::Json<UpdateManageUser>, req: HttpR
         }
     })
 }
-fn delete(user_id: web::Path<i32>, req: HttpRequest) -> HttpResponse {
+fn update_password(username: web::Path<String>, body: web::Json<UpdateManagePassword>, req: HttpRequest) -> HttpResponse {
     transaction_res(|trans| {
         if let Err(e) = verify_staff(trans, &req) { return e }
-        if let Err(e) = token_clean_all_by_id(trans, *user_id) {
-            return HttpResponse::InternalServerError().body(e.description().to_string())
-        }
-        match user_delete(trans, *user_id) {
-            Err(e) => HttpResponse::InternalServerError().body(e.description().to_string()),
-            Ok(false) => HttpResponse::NotFound().finish(),
-            Ok(true) => HttpResponse::NoContent().finish()
-        }
-    })
-}
-fn update_password(user_id: web::Path<i32>, body: web::Json<UpdateManagePassword>, req: HttpRequest) -> HttpResponse {
-    transaction_res(|trans| {
-        if let Err(e) = verify_staff(trans, &req) { return e }
-        match user_set_password(trans, *user_id, &body.new_password) {
+        match user_set_password(trans, &*username, &body.new_password) {
             Err(e) => HttpResponse::InternalServerError().body(e.description().to_string()),
             Ok(false) => HttpResponse::NotFound().finish(),
             Ok(true) => HttpResponse::Ok().finish()
@@ -113,8 +101,7 @@ pub fn register_view(scope: Scope) -> Scope {
     scope
         .route("/admin/user/", web::get().to(list))
         .route("/admin/user/", web::post().to(create))
-        .route("/admin/user/{user_id}/", web::get().to(retrieve))
-        .route("/admin/user/{user_id}/", web::put().to(update))
-        .route("/admin/user/{user_id}/", web::delete().to(delete))
-        .route("/admin/user/{user_id}/password/", web::put().to(update_password))
+        .route("/admin/user/{username}/", web::get().to(retrieve))
+        .route("/admin/user/{username}/", web::put().to(update))
+        .route("/admin/user/{username}/password/", web::put().to(update_password))
 }
